@@ -137,3 +137,4 @@
 17-Jan-2024  - V1.46 Add BCIF import and export support to IoUtil and MarshalUtil
 21-May-2024  - V1.47 Fix pylinting
 20-Aug-2024  - V1.48 Disable default backup to fallback setting in StashableBase
+10-Oct-2024  - v1.49 Allow local stash dir and replaced client_auth purpose with server_auth in ssl context creation for python 10 update
